Move colors to variables

--- a/app/assets/stylesheets/blocks/list.sass
+++ b/app/assets/stylesheets/blocks/list.sass
@@ -29,7 +29,7 @@
   &.is-active,
   &:hover
     color: #fff
-    background: #5D83A9
+    background: $blue_dark
 
 .list-content
   display: table-cell
@@ -37,18 +37,18 @@
 
 .list-panel
   padding: 15px
-  border: 1px solid #D6DFE9
+  border: 1px solid $blue_medium
   min-height: 269px
-  background: #D6DFE9
-  color: #5d83a9
+  background: $blue_medium
+  color: $blue_dark
   text-shadow: 0 1px rgba(255, 255, 255, .75)
   border-radius: 5px
   box-sizing: border-box
 
   &.is-empty
     padding: 0
-    border: 1px solid #F5F7F9
-    background: #F5F7F9
+    border: 1px solid $blue_light
+    background: $blue_light
     line-height: 267px
     text-align: center
 
