--- a/app/assets/stylesheets/blocks/pagination.sass
+++ b/app/assets/stylesheets/blocks/pagination.sass
@@ -1,3 +1,5 @@
+@import 'imports'
+
 .pagination
   margin-top: 15px
 
@@ -9,7 +11,7 @@
   line-height: 40px
   text-align: center
   border-radius: 5px
-  color: #5D83A9
+  color: $blue_dark
 
   &:first-child
     margin-left: 0
@@ -19,4 +21,4 @@
 
   &.is-active
     color: #fff
-    background: #5D83A9
+    background: $blue_dark
