--- a/app/assets/stylesheets/blocks/search_form.sass
+++ b/app/assets/stylesheets/blocks/search_form.sass
@@ -1,7 +1,9 @@
+@import 'imports'
+
 .search_form
   margin-top: 5px
   padding: 10px 15px
-  background: #D6DFE9
+  background: $blue_medium
   border-radius: 5px
 
 .search_form-label
@@ -31,7 +33,7 @@
     position: absolute
     top: 6px
     left: 0
-    border: 1px solid #5D83A9
+    border: 1px solid $blue_dark
     height: 16px
     width: 16px
     background: #fff
@@ -48,6 +50,6 @@
       left: 6px
       height: 6px
       width: 6px
-      background: #5D83A9
+      background: $blue_dark
       border-radius: 50%
 
