--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -1,3 +1,5 @@
+@import 'imports'
+
 html, body
   width: 100%
   height: 100%
@@ -9,7 +11,7 @@ body
 /* Header */
 .layout-header
   height: 65px
-  background: #5D83A9
+  background: $blue_dark
   border-radius: 0 0 5px 5px
 
 /* Main Wrapper */
@@ -43,6 +45,6 @@ body
   width: 1020px
   height: 65px
   margin: 0 auto
-  background: #5D83A9
+  background: $blue_dark
   color: #fff
   border-radius: 5px 5px 0 0
