Markup and styles for panels, buttons and initial markup for forms

--- a/app/assets/stylesheets/imports.sass
+++ b/app/assets/stylesheets/imports.sass
@@ -2,6 +2,12 @@ $blue_dark: #5D83A9
 $blue_medium: #D6DFE9
 $blue_light: #F5F7F9
 
+$green_dark: #308434
+$red_dark: #D20A2F
+
+$header_font_size: 14px
+$text_font_size: 13px
+
 =lh_100p
   &:after
     display: inline-block
@@ -9,3 +15,11 @@ $blue_light: #F5F7F9
     height: 100%
     width: 0
     vertical-align: top
+
+=no_select
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -khtml-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
