--- a/app/assets/stylesheets/blocks/page.sass
+++ b/app/assets/stylesheets/blocks/page.sass
@@ -5,6 +5,7 @@
 .page-title
   padding: 10px 15px
   height: 25px
+  font-size: $header_font_size
   line-height: 25px
   background: $blue_medium
   color: $blue_dark
@@ -17,4 +18,11 @@
   background: $blue_light
   border-radius: 5px
   color: #555
-  padding: 10px 15px
+  padding: 15px
+
+p.page-text
+  margin: 25px 0 0 0
+
+  &:first-child
+    margin-top: 0
+
