--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -3,5 +3,20 @@
 .panel
 
 .panel-header
+  border: 1px solid $blue_medium
+  padding: 9px 14px
+  height: 25px
+  font-size: $header_font_size
+  line-height: 25px
+  background: $blue_medium
+  color: $blue_dark
+  text-shadow: 0 1px rgba(255, 255, 255, .75)
+  border-radius: 5px 5px 0 0
 
 .panel-body
+  margin-top: -1px
+  border: 1px solid $blue_medium
+  padding: 10px 15px
+  background: #fff
+  border-radius: 0 0 5px 5px
+  color: #555
