Markup and styles for forms

--- a/app/assets/stylesheets/imports.sass
+++ b/app/assets/stylesheets/imports.sass
@@ -5,6 +5,8 @@ $blue_light: #F5F7F9
 $green_dark: #308434
 $red_dark: #D20A2F
 
+$text_color: #555
+
 $header_font_size: 14px
 $text_font_size: 13px
 
