--- a/app/assets/stylesheets/blocks/page.sass
+++ b/app/assets/stylesheets/blocks/page.sass
@@ -17,12 +17,12 @@
   min-height: 500px
   background: $blue_light
   border-radius: 5px
-  color: #555
+  color: $text_color
   padding: 15px
 
 p.page-text
   margin: 25px 0 0 0
 
   &:first-child
-    margin-top: 0
+    margin-top: -5px
 
