--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -20,3 +20,9 @@
   background: #fff
   border-radius: 0 0 5px 5px
   color: #555
+
+p.panel-text
+  margin: 25px 0 0 0
+
+  &:first-child
+    margin-top: 0
