Small improvements for form actions

--- a/app/views/landings/_form.html.slim
+++ b/app/views/landings/_form.html.slim
@@ -61,6 +61,7 @@ form.form class=("for-#{modifier}" if modifier)
       textarea
         | Ну я, эм... Это самое.
 
-  .form-actions.fl_r
-    button.small_button.is-green type='submit'
-      | Отправить
+  .form-actions
+    .fl_r
+      button.small_button.is-green type='submit'
+        | Отправить
