--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -16,7 +16,7 @@
 .panel-body
   margin-top: -1px
   border: 1px solid $blue_medium
-  padding: 10px 15px
+  padding: 15px
   background: #fff
   border-radius: 0 0 5px 5px
   color: #555
