Flash messages + complete login functionality

--- a/app/assets/stylesheets/blocks/header.sass
+++ b/app/assets/stylesheets/blocks/header.sass
@@ -1,8 +1,11 @@
 @import 'imports'
 
 .header
-  width: 1020px
+  width: 990px
   margin: 0 auto
   color: #fff
   padding: 20px 15px
   font-size: $header_font_size
+
+  a
+    color: #fff
