--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -2,6 +2,12 @@
 
 .panel
 
+  &.for-login_form
+    display: inline-block
+    margin-top: 65px
+    width: 400px
+    text-align: left
+
 .panel-header
   border: 1px solid $blue_medium
   padding: 9px 14px
