--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -8,6 +8,13 @@ body
   font-size: $text_font_size
   line-height: 25px
 
+a
+  color: $blue_dark
+
+.layout.for-logged_out_user
+  .layout-content_inner
+    margin-left: 0
+
 /* Header */
 .layout-header
   height: 65px
