--- a/app/assets/stylesheets/blocks/main_content.sass
+++ b/app/assets/stylesheets/blocks/main_content.sass
@@ -1,4 +1,9 @@
 @import 'imports'
 
 .main_content
-  padding: 15px 0 15px 15px
+  position: relative
+  padding: 75px 0 15px 15px
+
+  .layout.for-logged_out_user &
+    padding-top: 15px
+    padding-left: 0
