--- a/app/assets/stylesheets/blocks/page.sass
+++ b/app/assets/stylesheets/blocks/page.sass
@@ -1,8 +1,14 @@
 @import 'imports'
 
 .page
+  .layout.for-logged_out_user &
+    text-align: center
 
 .page-title
+  position: absolute
+  top: 15px
+  left: 15px
+  right: 0
   padding: 10px 15px
   height: 25px
   font-size: $header_font_size
@@ -12,8 +18,10 @@
   text-shadow: 0 1px rgba(255, 255, 255, .75)
   border-radius: 5px
 
+  .layout.for-logged_out_user &
+    left: 0
+
 .page-body
-  margin-top: 15px
   min-height: 500px
   background: $blue_light
   border-radius: 5px
