--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,27 +7,44 @@ html
     = javascript_include_tag 'application'
     = csrf_meta_tags
 
-  body.layout data-app="app"
+  body.layout class=('for-logged_out_user' unless current_user) data-app="app"
     .layout-main
-      header.layout-header data-view="header"
+      header.layout-header
         .header
           | Coffee Dolphins
+          - if current_user
+            .fl_r
+              ' Вы вошли как <b>#{current_user.email}</b>,
+              = link_to 'выйти', logout_path
 
       .clearfix
         section.layout-content
           .layout-content_inner
             .main_content
+              - if notice
+                .flash_message.is-notice data-view='flash_message'
+                  = notice
+                  .flash_message-close.fl_r.js-flash_message-close
+                    | Закрыть
+
+              - if alert
+                .flash_message.is-alert data-view='flash_message'
+                  = alert
+                  .flash_message-close.fl_r.js-flash_message-close
+                    | Закрыть
+
               .page.js-app-page_wrapper
                 = yield
 
-        aside.layout-sidebar
-          .menu.js-app-menu
-            .menu-header
-              | Меню
-            .menu-items
-              - menu_items.each do |title, path, options = {}|
-                - current_page = current_page?(path)
-                = link_to title, path, class: "menu-item js-app-menu_item #{'is-active' if current_page}", data: {menu_item_id: options[:menu_item_id]}
+        - if current_user
+          aside.layout-sidebar
+            .menu.js-app-menu
+              .menu-header
+                | Меню
+              .menu-items
+                - menu_items.each do |title, path, options = {}|
+                  - current_page = current_page?(path)
+                  = link_to title, path, class: "menu-item js-app-menu_item #{'is-active' if current_page}", data: {menu_item_id: options[:menu_item_id]}
 
       .layout-empty
 
