--- a/app/views/statistics/show.html.slim
+++ b/app/views/statistics/show.html.slim
@@ -2,5 +2,9 @@
   | Статистика
 
 .page-body
-  p.page-text
-    | Тут какой-то текст
+  .panel
+    .panel-header
+      | Форма в панельке
+    .panel-body
+      = render 'shared/form'
+
