--- a/app/assets/stylesheets/blocks/small_button.sass
+++ b/app/assets/stylesheets/blocks/small_button.sass
@@ -13,6 +13,7 @@
   cursor: pointer
   border-radius: 3px
   text-shadow: none
+  font-weight: normal
   box-sizing: initial
   +no_select
 
@@ -24,6 +25,7 @@
     color: #fff
 
   &:active
+    margin-bottom: -1px
     vertical-align: -1px
     box-shadow: none
 
