--- a/app/assets/stylesheets/imports.sass
+++ b/app/assets/stylesheets/imports.sass
@@ -27,6 +27,12 @@ $text_font_size: 13px
   -ms-user-select: none
   user-select: none
 
+=text_overflow
+  display: block
+  overflow: hidden !important
+  white-space: nowrap
+  text-overflow: ellipsis
+
 =clearfix
   &:before,
   &:after
