--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -10,7 +10,7 @@
 
 .panel-header
   border: 1px solid $blue_medium
-  padding: 9px 14px
+  padding: 9px 15px
   height: 25px
   font-size: $header_font_size
   line-height: 25px
@@ -19,16 +19,51 @@
   text-shadow: 0 1px rgba(255, 255, 255, .75)
   border-radius: 5px 5px 0 0
 
-.panel-body
+.panel-body,
+.panel-list
   margin-top: -1px
   border: 1px solid $blue_medium
-  padding: 15px
   background: #fff
   border-radius: 0 0 5px 5px
   color: #555
+  overflow: hidden
+
+.panel-body
+  padding: 15px
+
+.panel-list
+  padding: 0
+
+.panel-list_row
+  +clearfix
+  border-top: 1px solid $blue_medium
+
+  &:first-child
+    border-top: 0
+
+.panel-list_label
+  float: left
+  width: 20%
+  padding: 9px 15px
+  font-size: 12px
+  font-weight: bold
+  box-sizing: border-box
+
+.panel-list_value
+  float: left
+  padding: 9px 15px
+  width: 80%
+  box-sizing: border-box
 
 p.panel-text
   margin: 25px 0 0 0
 
   &:first-child
     margin-top: 0
+
+.panel-list p.panel-text
+  margin: 25px 15px 15px
+
+  &:first-child
+    margin-top: 15px
+
