--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,5 +1,8 @@
 .page-title
   | Пользователи
+  .fl_r
+    .small_button.is-green.is-disabled
+      | Добавить нового
 
 .page-body
   - if @users.any?
