--- a/app/assets/stylesheets/blocks/small_button.sass
+++ b/app/assets/stylesheets/blocks/small_button.sass
@@ -30,6 +30,21 @@
     vertical-align: -1px
     box-shadow: none
 
+  &.is-disabled,
+  &.is-disabled:hover,
+  &:disabled,
+  &:disabled:hover
+    border: 1px solid lighten($blue_dark, 15%) !important
+    background: #fff !important
+    color: lighten($blue_dark, 15%) !important
+    box-shadow: none !important
+    cursor: default
+
+  &.is-disabled:active,
+  &:disabled:active
+    margin-bottom: 0
+    vertical-align: initial !important
+
   &.is-green
     border: 1px solid $green_dark
     color: $green_dark
@@ -37,6 +52,13 @@
     &:hover
       background: $green_dark
       color: #fff
+
+    &.is-disabled,
+    &.is-disabled:hover,
+    &:disabled,
+    &:disabled:hover
+      border: 1px solid #92c795 !important
+      color: #92c795 !important
 
   &.is-red
     border: 1px solid $red_dark
@@ -46,4 +68,11 @@
     &:hover
       background: $red_dark
       color: #fff
+
+    &.is-disabled,
+    &.is-disabled:hover,
+    &:disabled,
+    &:disabled:hover
+      border: 1px solid lighten($red_dark, 30%) !important
+      color: lighten($red_dark, 30%) !important
 
