Use new version of vtree

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
     = javascript_include_tag 'application'
     = csrf_meta_tags
 
-  body.layout class=('for-logged_out_user' unless current_user) data-app="app"
+  body.layout class=('for-logged_out_user' unless current_user) data-view="app#layout"
     .layout-main
       header.layout-header
         .header
@@ -22,13 +22,13 @@ html
           .layout-content_inner
             .main_content
               - if notice
-                .flash_message.is-notice data-view='flash_message'
+                .flash_message.is-notice data-view='app#flash_message'
                   = notice
                   .flash_message-close.fl_r.js-flash_message-close
                     | Закрыть
 
               - if alert
-                .flash_message.is-alert data-view='flash_message'
+                .flash_message.is-alert data-view='app#flash_message'
                   = alert
                   .flash_message-close.fl_r.js-flash_message-close
                     | Закрыть
