--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -7,6 +7,8 @@ html, body
 body
   font-size: $text_font_size
   line-height: 25px
+  background: image-url('cream_pixels_bg.png') repeat
+  background-size: 160px
 
 a
   color: $blue_dark
