Implement neo form

--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -8,6 +8,12 @@
     width: 400px
     text-align: left
 
+.panels .panel
+  margin-top: 15px
+
+  &:first-child
+    margin-top: 0
+
 .panel-header
   border: 1px solid $blue_medium
   padding: 9px 15px
