--- a/app/assets/stylesheets/form/_common.sass
+++ b/app/assets/stylesheets/form/_common.sass
@@ -1,24 +1,31 @@
 @import 'form/imports'
 
-.textbox,
-.select,
+.text_box,
+.select_box,
 .textarea,
-.checkbox,
-.checkboxes,
-.radio_buttons
+.check_box,
+.check_boxes_list,
+.radio_buttons_list
+  margin-bottom: 15px
+
   input[type="text"],
   input[type="password"],
   textarea,
   select
     display: block
 
-  margin-top: 15px
-
-  &:first-child
-    margin-top: 0
-
   label.control-label
     display: block
     font-size: 12px
     font-weight: bold
     +no_select
+
+    &.required
+      margin-left: -8px
+
+  abbr
+    position: relative
+    top: -2px
+    border: none
+    color: #c93636
+
