--- a/app/assets/stylesheets/form/check_boxes_list.sass
+++ b/app/assets/stylesheets/form/check_boxes_list.sass
@@ -1,14 +1,15 @@
 @import 'form/imports'
 
-.radio_buttons
+.check_boxes_list
   margin-right: -20px
 
-  label.radio_buttons-label
+  label.checkbox
     display: inline-block
     margin-right: 20px
     height: 29px
     line-height: 29px
     +no_select
 
-  .label_wrap
-    margin-left: 7px
+    .label_wrap
+      margin-left: 7px
+      vertical-align: middle
