--- a/app/assets/stylesheets/form/radio_buttons_list.sass
+++ b/app/assets/stylesheets/form/radio_buttons_list.sass
@@ -1,15 +1,14 @@
 @import 'form/imports'
 
-.checkboxes
+.radio_buttons_list
   margin-right: -20px
 
-  label.checkbox-label
+  label.radio
     display: inline-block
     margin-right: 20px
     height: 29px
     line-height: 29px
     +no_select
 
-  .label_wrap
-    margin-left: 7px
-    vertical-align: middle
+    .label_wrap
+      margin-left: 7px
