--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -25,6 +25,7 @@
           = f.input :checkboxes, as: :check_boxes, label: 'Каково это?', input_html: {checked: false}, collection: [['Отвратно', 0], ['Неплохо', 1], ['Супер', 2]]
           = f.input :radio, as: :radio_buttons, label: 'А конкретнее?', input_html: {checked: false}, collection: [['Отвратно', 0], ['Неплохо', 1], ['Супер', 2]]
           = f.input :select_field, label: 'Выберите что-нибудь, пожалуйста', prompt: 'Ну выберите...', selected: false, collection: [['Отвратно', 0], ['Неплохо', 1], ['Супер', 2]]
+          = f.input :some_text, as: :text, label: 'А здесь можно и текста написать', input_html: {value: ''}
 
           .form-actions
             .fl_r
