--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,5 +2,6 @@
 //= require global
 //= require layout
 //= require_tree ./blocks
+//= require_tree ./buttons
 //= require_tree ./form
 //= require_self
