--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -2,9 +2,9 @@
   .panel-header
     = user.email
     .fl_r
-      .small_button.is-disabled
+      button.small_button
         | Редактировать
-      .small_button.is-red.is-disabled
+      button.small_button.is-red
         | Удалить
 
   .panel-list
