--- a/app/assets/stylesheets/buttons/small_button.sass
+++ b/app/assets/stylesheets/buttons/small_button.sass
@@ -3,14 +3,16 @@
 .small_button
   position: relative
   display: inline-block
+  min-width: 60px
   margin-left: 9px
   border: 1px solid $blue_dark
   background: #fff
-  padding: 0 10px
+  padding: 0 15px
   height: 23px
   color: $blue_dark
   font-size: $text_font_size
   line-height: 23px
+  text-align: center
   cursor: pointer
   border-radius: 3px
   text-shadow: none
