--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -2,6 +2,17 @@
 
 .panel
 
+  &.for-new_item
+    margin-bottom: 15px
+
+    .panel-header
+      border: 1px dashed $blue_dark
+
+    .panel-body
+      margin-top: 0
+      border-style: dashed
+      border-top: 0
+
   &.for-login_form
     display: inline-block
     margin-top: 65px
