Ability to delete users

--- a/app/assets/stylesheets/buttons/small_button.sass
+++ b/app/assets/stylesheets/buttons/small_button.sass
@@ -18,6 +18,7 @@
   text-shadow: none
   font-weight: normal
   box-sizing: initial
+  text-decoration: none
   box-shadow: 1px 1px 1px rgba(0, 0, 0, .2)
   +no_select
 
