--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -4,6 +4,8 @@
 
   &.for-new_item
     margin-bottom: 15px
+    border-radius: 5px
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, .15)
 
     .panel-header
       border: 1px dashed $blue_dark
