--- a/app/views/users/_new_user_form.html.slim
+++ b/app/views/users/_new_user_form.html.slim
@@ -2,7 +2,7 @@
   .panel-header
     | Форма добавления пользователя
   .panel-body
-    = neo_form_for user, url: users_path do |f|
+    = neo_form_for user do |f|
       .form-fields
         = f.input :email
         = f.input :password, label: 'Пароль'
