--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,4 +1,4 @@
-.panel data-view='item' data={item_id: user.id, edit_path: user_path(user)}
+.panel data-view='item' data={item_id: user.id, edit_path: user_path(user), block_path: user_path(user)}
   .panel-header
     = user.email
     .fl_r
