--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,3 +1,4 @@
+- sleep 1
 .panel data-view='item' data={item_id: user.id, edit_path: user_path(user), block_path: user_path(user)}
   .panel-header
     span data-role='item-title'
