--- a/app/views/users/_new_form.html.slim
+++ b/app/views/users/_new_form.html.slim
@@ -7,6 +7,8 @@
         = f.input :email
         = f.input :password, label: 'Пароль', required: true
         = f.input :password_confirmation, label: 'Подтверждение пароля', required: true
+        = f.input :full_name, label: 'Имя'
+        = f.input :description, label: 'Описание'
 
       .form-actions
         .fl_r
