Implement CRUD for positions

--- a/app/assets/stylesheets/blocks/page.sass
+++ b/app/assets/stylesheets/blocks/page.sass
@@ -28,9 +28,12 @@
   color: $text_color
   padding: 15px
 
-p.page-text
-  margin: 25px 0 0 0
+.page-empty_page_message
+  margin: -5px 0 30px
 
-  &:first-child
-    margin-top: -5px
+p.page-text
+  margin: -5px 0 30px
+
+  &:last-child
+    margin-bottom: 0
 
