--- a/app/views/positions/index.html.slim
+++ b/app/views/positions/index.html.slim
@@ -1,27 +1,16 @@
-.page-title
-  | Позиции
-  .fl_r
-    .small_button.is-green
-      | Сохранить
-    .small_button.is-red
-      | Удалить
-    .small_button
-      | Редактировать
+div data-component='app#items_list'
+  .page-title
+    | Позиции
+    .fl_r
+      button.small_button.is-green data-role='items_list-show_form'
+        | Добавить новую
 
-.page-body
-  .panel
-    .panel-header
-      | Товар #1
-      .fl_r
-        .small_button.is-green
-          | Сохранить
-        .small_button.is-red
-          | Удалить
-        .small_button
-          | Редактировать
-    .panel-body
-      p.panel-text
-        | Если бы меня спросили, какая часть технической реализации игры «Цезарь» мне интересна больше других, я бы вспомнил о расчете одного «дня» городской жизни. Отдельные компоненты математической модели города тоже интересны в реализации, но эти «шестеренки» будут крутиться только в сборе. Большая часть игры проходит внутри «игрового цикла», в котором проводятся вычисления параметров компонентов, выполняются перемещения игровых объектов, создаются новые события и объекты. Если вам интересно узнать, как была устроена симуляция города в одной из лучших игр 1998 года — добро пожаловать под кат. Описания, псевдокод и схемы помогут вам лучше узнать об используемых алгоритмах.
-      p.panel-text
-        | Вначале римляне были язычниками, поклонялись греческим и в меньшей степени этрусским богам. Позже мифологический период сменился увлечением языческими культами. Государство, взяв на себя организацию и проведение ритуалов, создало официальную религию, которая изменила прежние представления о богах. Религия в жизни людей всегда имело большое значение, и компьютерные модели не избежали человеческих предрассудков, авторы игры сильно утрируют понятие благосклонности божества, сводя его к трем состояниям покарал-нейтрален-благословил, но наличие штрафов и премий делает вычисления менее предсказуемыми, также как и наличие элемента случайности при выборе божества.
+  .page-body
+    = render 'new_form', positions: @positions, position: @position
+
+    .panels data-role='items_list-list_wrapper'
+      = render partial: 'position', collection: @positions
+
+    p.page-empty_page_message class=('hidden' if @positions.any?) data-role='items_list-empty_list_message'
+      | Нет позиций.
 
