--- a/app/views/users/_new_form.html.slim
+++ b/app/views/users/_new_form.html.slim
@@ -1,4 +1,4 @@
-.panel.for-new_item class=('hidden' if users.any?) data-view='new_item_form'
+.panel.for-new_item.hidden data-view='new_item_form'
   .panel-header
     | Форма добавления пользователя
   .panel-body
