--- a/app/assets/stylesheets/blocks/header.sass
+++ b/app/assets/stylesheets/blocks/header.sass
@@ -1,11 +1,20 @@
 @import 'imports'
 
 .header
-  width: 990px
+  position: relative
+  width: 1020px
   margin: 0 auto
   color: #fff
-  padding: 20px 15px
+  padding: 20px 15px 20px 85px
   font-size: $header_font_size
+  box-sizing: border-box
 
   a
     color: #fff
+
+.header-logo
+  position: absolute
+  top: 11px
+  left: 15px
+  width: 60px
+  height: 40px
