--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,7 @@ html
     .layout-main
       header.layout-header
         .header
+          img.header-logo src=image_path('logo.png')
           | Coffee Dolphins
           - if current_user
             .fl_r
