--- a/app/views/positions/_position.html.slim
+++ b/app/views/positions/_position.html.slim
@@ -8,7 +8,8 @@
 
   .panel-list data-role='item-info'
     .panel-list_row
-      = list_item 'Название', position.title
+      = list_item 'Категория', position.category
       = list_item 'Цена', position.price
       = list_item 'Прибыль', position.profit
+      = list_item 'Доступность', position.availability_level
 
