--- a/app/views/positions/edit.html.slim
+++ b/app/views/positions/edit.html.slim
@@ -2,8 +2,10 @@
   = neo_form_for @position do |f|
     .form-fields
       = f.input :title, label: 'Название'
+      = f.input :category, label: 'Категория'
       = f.input :price, as: :string, label: 'Цена'
       = f.input :profit, as: :string, label: 'Прибыль'
+      = f.input :availability_level, as: :string, label: 'Доступность'
       = f.input :image_url, as: :string
 
     .form-actions
