Some styling improvements

--- a/app/assets/stylesheets/blocks/panel.sass
+++ b/app/assets/stylesheets/blocks/panel.sass
@@ -38,20 +38,17 @@
   text-shadow: 0 1px rgba(255, 255, 255, .75)
   border-radius: 5px 5px 0 0
 
-.panel-body,
-.panel-list
+.panel-body
   margin-top: -1px
+  padding: 15px
   border: 1px solid $blue_medium
   background: #fff
   border-radius: 0 0 5px 5px
   color: #555
   overflow: hidden
 
-.panel-body
-  padding: 15px
-
 .panel-list
-  padding: 0
+  margin: -15px
 
 .panel-list_row
   +clearfix
