--- a/app/assets/stylesheets/form/_common.sass
+++ b/app/assets/stylesheets/form/_common.sass
@@ -29,3 +29,8 @@
     border: none
     color: #c93636
 
+  .hint
+    display: block
+    margin: 5px 10px 0
+    font-size: 12px
+    line-height: 15px
