--- a/app/views/positions/_new_form.html.slim
+++ b/app/views/positions/_new_form.html.slim
@@ -5,11 +5,11 @@
     = neo_form_for position do |f|
       .form-fields
         = f.input :apishops_position_id, as: :string, label: 'Apishops ID'
-        = f.input :title, label: 'Название'
+        = f.input :title, label: 'Название', hint: 'А тут подсказка'
         = f.input :category, label: 'Категория'
-        = f.input :price, as: :string, label: 'Цена'
-        = f.input :profit, as: :string, label: 'Прибыль'
-        = f.input :availability_level, as: :string, label: 'Доступность'
+        = f.input :price, as: :string, label: 'Цена', hint: 'в рублях, дробная часть отделяется точкой'
+        = f.input :profit, as: :string, label: 'Прибыль', hint: 'в рублях, дробная часть отделяется точкой'
+        = f.input :availability_level, as: :string, label: 'Доступность', hint: 'от 0 до 5'
         = f.input :image_url, as: :string
 
       .form-actions
