--- a/app/views/positions/edit.html.slim
+++ b/app/views/positions/edit.html.slim
@@ -3,9 +3,9 @@
     .form-fields
       = f.input :title, label: 'Название'
       = f.input :category, label: 'Категория'
-      = f.input :price, as: :string, label: 'Цена'
-      = f.input :profit, as: :string, label: 'Прибыль'
-      = f.input :availability_level, as: :string, label: 'Доступность'
+      = f.input :price, as: :string, label: 'Цена', hint: 'в рублях, дробная часть отделяется точкой'
+      = f.input :profit, as: :string, label: 'Прибыль', hint: 'в рублях, дробная часть отделяется точкой'
+      = f.input :availability_level, as: :string, label: 'Доступность', hint: 'от 0 до 5'
       = f.input :image_url, as: :string
 
     .form-actions
