--- a/app/views/positions/_new_form.html.slim
+++ b/app/views/positions/_new_form.html.slim
@@ -5,7 +5,7 @@
     = neo_form_for position do |f|
       .form-fields
         = f.input :apishops_position_id, as: :string, label: 'Apishops ID'
-        = f.input :title, label: 'Название', hint: 'А тут подсказка'
+        = f.input :title, label: 'Название'
         = f.input :category, label: 'Категория'
         = f.input :price, as: :string, label: 'Цена', hint: 'в рублях, дробная часть отделяется точкой'
         = f.input :profit, as: :string, label: 'Прибыль', hint: 'в рублях, дробная часть отделяется точкой'
