Implement initial modals

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -53,3 +53,8 @@ html
       .layout-footer_inner
         .footer
           | Step in my trip...
+
+    .modals_bg data-role='modals-bg'
+    .modals_layer data-role='modals-layer'
+      .modals_layer-container data-role='modals-container'
+
