--- a/app/assets/stylesheets/blocks/panel_item.sass
+++ b/app/assets/stylesheets/blocks/panel_item.sass
@@ -1,4 +1,5 @@
 @import 'imports'
+@import 'primitives/panel'
 
 .panel_item
   margin-top: -1px
@@ -14,22 +15,10 @@
       border-radius: 0 0 5px 5px
 
 .panel_item-header
-  border: 1px solid $blue_medium
-  padding: 9px 15px
-  height: 25px
-  font-size: $header_font_size
-  line-height: 25px
-  background: $blue_medium
-  color: $blue_dark
-  text-shadow: 0 1px rgba(255, 255, 255, .75)
+  +acts_as_panel_header
 
 .panel_item-body
-  margin-top: -1px
-  padding: 15px
-  border: 1px solid $blue_medium
-  background: #fff
-  color: #555
-  overflow: hidden
+  +acts_as_panel_body
 
 p.panel_item-text
   margin: 25px 0 0 0
