--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -9,6 +9,7 @@ body
   line-height: 25px
   background: image-url('cream_pixels_bg.png') center center repeat
   background-size: 160px
+  overflow-x: hidden
 
 a
   color: $blue_dark
