Forward modal form event to modal source button

--- a/app/assets/stylesheets/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/blocks/modals/modal.sass
@@ -15,6 +15,9 @@
   padding: 0
   border-radius: 0 0 5px 5px
 
+.modal-fields
+  padding: 15px
+
 .modal-buttons
   border-top: 1px solid $blue_medium
   padding: 15px
