--- a/app/assets/javascripts/bundles/app/templates/modal.jst.ejs
+++ b/app/assets/javascripts/bundles/app/templates/modal.jst.ejs
@@ -1,4 +1,4 @@
-<div class="modal" data-view='app#modal'>
+<div class="modal" data-component='app#modal'>
   <div class="modal-header"><%= title %></div>
   <div class="modal-body"><%= html %></div>
 </div>
