Import apishops positions from CSV

--- a/app/assets/stylesheets/form/_common.sass
+++ b/app/assets/stylesheets/form/_common.sass
@@ -5,7 +5,8 @@
 .textarea,
 .check_box,
 .check_boxes_list,
-.radio_buttons_list
+.radio_buttons_list,
+.file_box
   margin-bottom: 15px
 
   input[type="text"],
