--- a/app/assets/stylesheets/form/form.sass
+++ b/app/assets/stylesheets/form/form.sass
@@ -2,9 +2,11 @@
 
 .form
   &.for-page
-    margin: -5px 0
+    margin: -20px -15px -15px
+
+.form-fields
+  padding: 15px
 
 .form-actions
   +clearfix
-  padding-top: 5px
-  padding-bottom: 5px
+  padding: 5px 15px 15px
