--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -7,7 +7,7 @@
       = user.remove_button
 
   .panel_item-body data-role='item-info'
-    .panel-list
+    .panel_list
       = list_item 'Email', user.email
       - if user.description?
         = list_text(user.description)
