--- a/app/views/positions/index.html.slim
+++ b/app/views/positions/index.html.slim
@@ -11,7 +11,9 @@ div data-component='app#items_list'
     = render 'new_form', positions: @positions, position: @position
 
     .panels data-role='items_list-list_wrapper'
-      = render partial: 'position', collection: @positions
+      = render partial: 'position', collection: @positions.decorate
+
+    = pagination_for @positions
 
     p.page-empty_page_message class=('hidden' if @positions.any?) data-role='items_list-empty_list_message'
       | Нет позиций.
