--- a/app/assets/stylesheets/blocks/flash_message.sass
+++ b/app/assets/stylesheets/blocks/flash_message.sass
@@ -1,27 +1,39 @@
 @import 'imports'
 
+.flash_messages
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  z-index: 100
+
 .flash_message
-  margin-bottom: 15px
   padding: 10px 15px
-  height: 23px
+  height: 25px
   color: $text_color
   font-size: $text_font_size
-  line-height: 23px
-  border-radius: 5px
+  line-height: 25px
+  text-align: center
+  border-bottom: 1px solid
+  transition: margin-top .4s, opacity .4s
 
   &.is-notice
-    border: 1px solid lighten($green_dark, 10%)
+    border-color: lighten($green_dark, 45%)
     background: lighten($green_dark, 50%)
 
   &.is-alert
-    border: 1px solid lighten($red_dark, 10%)
+    border-color: lighten($red_dark, 10%)
     background: lighten($red_dark, 50%)
 
+.flash_message-inner
+  margin: 0 auto
+  width: 1020px
+  padding: 0 15px
+  box-sizing: border-box
+
 .flash_message-close
-  border-bottom: 1px dashed $text_color
+  margin: 0 0 0 -100%
   cursor: pointer
   font-size: 12px
-  line-height: 17px
-  margin: 3px 0
   color: $text_color_light
 
