--- a/app/views/positions/edit.html.slim
+++ b/app/views/positions/edit.html.slim
@@ -7,6 +7,7 @@
       = f.input :profit, as: :string, label: 'Прибыль', hint: 'в рублях, дробная часть отделяется точкой'
       = f.input :availability_level, as: :string, label: 'Доступность', hint: 'от 0 до 5'
       = f.input :image_url, as: :string
+      = f.association :search_keywords, as: :suggest
 
     .form-actions
       .fl_r
