--- a/app/assets/stylesheets/blocks/pagination.sass
+++ b/app/assets/stylesheets/blocks/pagination.sass
@@ -1,14 +1,26 @@
 @import 'imports'
 
 .pagination
-  margin-top: 15px
+  margin-bottom: 15px
 
-.pagination-page
+  .panels + &
+    margin-top: 15px
+    margin-bottom: 0
+
+  a
+    display: block
+    text-decoration: none
+
+.pagination-first,
+.pagination-prev,
+.pagination-page,
+.pagination-gap,
+.pagination-next,
+.pagination-last
   float: left
-  margin-left: 5px
-  width: 30px
-  height: 40px
-  line-height: 40px
+  margin-left: 7px
+  height: 35px
+  line-height: 35px
   text-align: center
   border-radius: 5px
   color: $blue_dark
@@ -16,9 +28,25 @@
   &:first-child
     margin-left: 0
 
+.pagination-first,
+.pagination-prev,
+.pagination-page,
+.pagination-next,
+.pagination-last
   &:hover
     background: #fff
 
-  &.is-active
-    color: #fff
-    background: $blue_dark
+.pagination-page,
+.pagination-gap
+  width: 30px
+
+.pagination-first,
+.pagination-prev,
+.pagination-next,
+.pagination-last
+  a
+    padding: 0 10px
+
+.pagination-page.is-current
+  color: #fff
+  background: $blue_dark
