--- a/app/assets/stylesheets/blocks/tags.sass
+++ b/app/assets/stylesheets/blocks/tags.sass
@@ -5,21 +5,25 @@
   margin: 0 -7px -7px 0
 
   &:empty
-    margin: 0
+    margin: 0 !important
+
+  &.has-mt7
+    margin-top: 7px
 
 .tags-item
   position: relative
   float: left
   margin: 0 7px 7px 7px
-  margin-left: 7px
+  margin-left: 6px
   padding: 0 10px 0 7px
   height: 24px
-  font-size: 12px
-  line-height: 24px
   background: #aaa
   color: #fff
+  font-size: 12px
+  line-height: 24px
+  white-space: nowrap
   text-shadow: 0 1px rgba(0, 0, 0, .5)
-  border-radius: 3px
+  border-radius: 2px 3px 3px 2px
 
   &:before
     content: ''
@@ -31,4 +35,4 @@
     width: 0
     border-top: 12px solid transparent
     border-bottom: 12px solid transparent
-    border-right: 8px solid #aaa
+    border-right: 7px solid #aaa
