--- a/app/assets/stylesheets/form/_common.sass
+++ b/app/assets/stylesheets/form/_common.sass
@@ -9,6 +9,9 @@
 .file_box
   margin-bottom: 15px
 
+  &:last-child
+    margin-bottom: 0
+
   input[type="text"],
   input[type="password"],
   textarea,
@@ -36,5 +39,3 @@
     font-size: 12px
     line-height: 15px
 
-  &.is-stand_alone
-    margin-bottom: 0
