--- a/app/assets/stylesheets/buttons/small_button.sass
+++ b/app/assets/stylesheets/buttons/small_button.sass
@@ -4,7 +4,7 @@
   position: relative
   display: inline-block
   min-width: 60px
-  margin-left: 9px
+  margin-left: 7px
   border: 1px solid $blue_dark
   background: #fff
   padding: 0 15px
@@ -21,6 +21,11 @@
   text-decoration: none
   box-shadow: 1px 1px 1px rgba(0, 0, 0, .2)
   +no_select
+
+  &.is-icon
+    padding: 0
+    min-width: 23px
+    width: 23px
 
   &:first-child
     margin-left: 0
@@ -48,7 +53,8 @@
       background: $blue_dark !important
       border: 1px solid $blue_dark !important
 
-      .small_button-wrap
+      .small_button-wrap,
+      .icon_button-wrap
         visibility: hidden
 
       .button_loader
