Ability to delete keywords

--- a/app/assets/stylesheets/blocks/tags.sass
+++ b/app/assets/stylesheets/blocks/tags.sass
@@ -15,7 +15,7 @@
   float: left
   margin: 0 7px 7px 7px
   margin-left: 6px
-  padding: 0 10px 0 7px
+  padding: 0 8px 0 7px
   height: 24px
   background: #aaa
   color: #fff
@@ -36,3 +36,12 @@
     border-top: 12px solid transparent
     border-bottom: 12px solid transparent
     border-right: 7px solid #aaa
+
+.tags-item_delete
+  display: inline-block
+  font-size: 10px
+  font-weight: normal
+  padding: 3px
+  margin-right: -3px
+  cursor: pointer
+
