--- a/app/assets/javascripts/bundles/app/templates/keyword.jst.ejs
+++ b/app/assets/javascripts/bundles/app/templates/keyword.jst.ejs
@@ -1,6 +1,10 @@
 <div class="tags-item is-deletable %>" data-role="keyword" data-title="<%- keyword.title %>">
   <%- keyword.title %>
+  <i class="fa fa-close tags-item_delete" data-role="keyword-delete"></i>
   <input type="hidden"
     name="<%- objectName %>[<%- associatedAttributesName %>][<%- keyword.virtualId %>][title]"
     value="<%- keyword.title %>" />
+  <input type="hidden" data-role="keyword-destroy_flag"
+    name="<%- objectName %>[<%- associatedAttributesName %>][<%- keyword.virtualId %>][_destroy]"
+    value="0" />
 </div>
