--- a/app/views/positions/_search_keywords.html.slim
+++ b/app/views/positions/_search_keywords.html.slim
@@ -1,4 +1,4 @@
 .tags
   - position.search_keywords.each do |search_keyword|
     .tags-item
-      = search_keyword.title
+      = search_keyword.name
