--- a/app/assets/javascripts/bundles/app/templates/keyword.jst.ejs
+++ b/app/assets/javascripts/bundles/app/templates/keyword.jst.ejs
@@ -1,6 +1,12 @@
 <div class="tags-item is-deletable %>" data-role="keyword" data-name="<%- keyword.name %>">
   <%- keyword.name %>
   <i class="fa fa-close tags-item_delete" data-role="keyword-delete"></i>
+
+  <% if (keyword.id) { %>
+    <input type="hidden"
+      name="<%- objectName %>[<%- associatedAttributesName %>][<%- keyword.virtualId %>][id]"
+      value="<%- keyword.id %>" />
+  <% } %>
   <input type="hidden"
     name="<%- objectName %>[<%- associatedAttributesName %>][<%- keyword.virtualId %>][name]"
     value="<%- keyword.name %>" />
