Fixes to default scopes + save icon

--- a/app/views/positions/_edit_search_keywords.html.slim
+++ b/app/views/positions/_edit_search_keywords.html.slim
@@ -4,4 +4,4 @@
       = f.association :search_keywords, as: :keywords, modifier: 'stand_alone', label: false
     .flexible-right
       button.small_button.is-icon.is-green type='submit'
-        = fa_icon 'pencil'
+        = fa_icon 'save'
