Make footer not to blink

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -14,6 +14,10 @@ body
 a
   color: $blue_dark
 
+.layout.is-loading
+  .layout-main
+    margin-bottom: 0
+
 .layout.for-logged_out_user
   .layout-content_inner
     margin-left: 0
